ui/app/styles/main.css
body {
    background-color: #ffffff;
    background-image: url(../images/beige-paper.png);
}

.ctr {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

.hdr {
    position: relative;
    flex: 1;
    max-height: 83px;
    padding: 5px 15px;
    background-color: #b0191b;
    border-bottom: 3px solid #75130a;
}

.hdr input {
    position: absolute;
        top: 50%;
        right: 25px;
    width: 45vw;
    height: 30px;
    margin-top: -15px;
    padding-left: 30px;
    background-color: rgba(255,255, 255, 0.80);
    background-image: url(../images/ico_search.svg);
    background-repeat: no-repeat;
    background-position: 0 50%;
    background-size: auto 90%;
    color: #b0191b;
    border: none;
    outline: none;
    transition: all 0.250s ease-in;
}

.hdr input:focus {
    background-color: white;
}

.logo {
    display: inline-block;
    width: 70px;
    height: 70px;
}

.logo .fill {
    fill : white;
}

.ctt {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
}

nav > a {
    position: relative;
    display: inline-block;
    width: 30vh;
    font-family: 'Lobster', cursive;
    font-size: 5vh;
    text-align: center;
    font-style: italic;
    color: #75130A;
    -webkit-transition: all .250s ease-in;
    -moz-transition: all 0.250s ease-in;
    transition: all 0.250s ease-in;
}

nav > a:before {
    content: url('../images/bottles.svg');
    display: block;
    width: 50vw;
    height: 50vw;
    max-width: 30vh;
    max-height: 30vh;
    margin: auto;
    padding: 1vw;
    background-color: #b0191b;
    border-radius: 1000px;
}

nav > a:after {
    content: '';
    position: absolute;
        top: 0;
    display: block;
    width: 50vw;
    height: 50vw;
    max-width: 30vh;
    max-height: 30vh;
    margin: auto;
    padding: 1vw;
    border-radius: 1000px;
}

nav > a:active,
nav > a:visited,
nav > a:focus {
    text-decoration: none;
    color: #75130A;
}

nav > a:hover {
    text-decoration: none;
    color: #b0191b;
}

nav > a:hover:before {
    animation: moveIt 2s -0.5s linear infinite;
}

nav > a:hover:after {
    box-shadow: inset 0 18px 0 rgba(176, 25, 27, 0.60),
    inset 18px 0 0 rgba(176, 25, 27, 0.60),
    inset 0 -18px 0 rgba(176, 25, 27, 0.60),
    inset -18px 0 0 rgba(176, 25, 27, 0.60);
    -webkit-animation: rotar 2s -0.5s linear infinite;
    animation: rotar 2s -0.5s linear infinite;
}

.btls-list {
    list-style-type: none;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    transition: all 0.250s ease-in;
}

.btls-list.split {
    max-width: 60vw;
    margin-right: 35vw;
    transition: all 0.250s ease-in;
}

.btls-list li {
    position: relative;
    flex: 1;
    min-width: 275px;
    max-width: 275px;
    margin: 5px;
    padding: 10px 15px 40px;
    background-color: white;
    border-radius: 5px;
}


.btls-list  .vintage {
    position: absolute;
    top: 6px;
    left: 2px;
    font-size: 22px;
    padding: 2px 10px;
    color: white;
    z-index: 1;
    -webkit-transform: rotate(-30deg);
}

.btls-list .vintage:before {
    content: '';
    position: absolute;
    top: 0;
    width: 130px;
    display: flex;
    align-items: center;
    left: -19px;
    border-top: 0px solid transparent;
    border-right: 60px solid rgba(0, 0, 0, 0);
    border-bottom: 34px solid #b0191b;
    border-left: 20px solid rgba(0, 0, 0, 0);
    z-index: -2;
    -webkit-transform: rotate(0deg);
}

.btls-list .vintage.early:before { border-bottom-color: darkorange;}
.btls-list .vintage.good:before { border-bottom-color: limegreen;}
.btls-list .vintage.late:before {border-bottom-color: black;}

.btls-list .vintage:after {
    content: '';
    position: absolute;
    top: 26px;
    left: -17px;
    width: 124px;
    height: 1px;
    z-index: -3;
    box-shadow: 0 8px 6px 0 black;
}

.btls-list .price {
    display: flex;
    position: absolute;
        left: 0;
        right: 0;
        bottom: 0;
    height: 40px;
    color: #FFF;
    font-size: 25px;
    background-color: #B0191B;
    align-items: center;
    justify-content: center;
    border-radius: 0 0 5px 5px;
}

.btl-ctr {
    position: relative;
}

.btl {
    display: block;
    max-width: 225px;
    margin: auto;
}

.btl svg {
    max-width: 100%;
}

.btl-ctr img {
    position: absolute;
        top: 97px;
        left: 50%;
    width: 47px;
    margin-left: -23.5px;
}

.btl.bdx .fill {
    fill : #75130A;
}

.btl.white .fill {
    fill: #edd262;
}

.btl.rose .fill {
    fill: #e97c63;
}

.dtl a {
    color: #b0191b;
    transition: all 0.150s ease-in;
    cursor: pointer;
}

.dtl a:active,
.dtl a:visited,
.dtl a:focus {
    color: #b0191b;
    text-decoration: none;
}

.dtl a:hover {
    text-decoration: none;
    color: #75130a;
}

.dtl-edit {
    position: fixed;
        top: 89px;
        right: 2vw;
    width: 33vw;
    padding: 10px;
    background-color: white;
    border-radius: 5px;
}

.flr {
    position: relative;
    clear: both;
    overflow: hidden;
    margin-bottom: 5px;
}

.flr label {
    float: left;
    color: #75130a;
}

.flr textarea,
.flr input,
.flr select {
    float: right;
    width: 60%;
    min-height: 25px;
    padding: 2px 5px;
    color: #b0191b;
    font-weight: normal;
    border: 1px solid #b0191b;
    border-radius: 3px;
    outline: none;
    text-align: left;
}

.flr textarea.appnd,
.flr input.append,
.flr select.append {
    float: right;
    width: 50%;
    border-radius: 3px 0 0 3px;
    background-color: white;
}

.flr select {
    height: 25px;
    border-radius: 3px;
    background-color: #ffffff;
    -webkit-appearance: none;
}

.flr.select label:after {
    content: '\25BC';
    position: absolute;
    right: 3px;
    top: 2px;
    color: #b0191b;
}

.append {
    float: right;
    width: 10%;
    height: 25px;
    padding-top: 2px;
    color: #ffffff;
    font-weight: bold;
    text-align: center;
    background-color: #b0191b;
    border-radius: 0 3px 3px 0;
}

.dtl-edit img {
    display: block;
    margin: 10px auto 10px;
    max-height: 350px;
}

.dtl-edit button {
    float: right;
    margin-left: 5px;
    font-size: 16px;
    color: #ffffff;
    background-color: #75130a;
    border: none;
    border-radius: 3px;
}

.ftr {
    display: flex;
    flex: 0;
    min-height: 20px;
    justify-content: center;
    align-items: center;
    color: white;
    background-color: #75130a;
    background-image: url(../images/dark-stripes.png);
}

.ftr p {
    margin: 0;
    font-size: 10px;
    font-style: italic;
}


@keyframes rotar{
    0%{
        transform:rotateZ(0deg) scaleX(1) scaleY(1);
    }
    50%{
        transform:rotateZ(180deg) scaleX(1.18) scaleY(1.05);
    }
    100%{
        transform:rotateZ(360deg) scaleX(1) scaleY(1);
    }
}

@-webkit-keyframes rotar{
    0%{
        transform:rotateZ(0deg) scaleX(1) scaleY(1);
    }
    50%{
        transform:rotateZ(180deg) scaleX(1.18) scaleY(1.05);
    }
    100%{
        transform:rotateZ(360deg) scaleX(1) scaleY(1);
    }
}


@keyframes moveIt {
    0%{
        transform:translateX(0) translateY(0);
    }
    30%{
        transform:translateX(5px) translateY(-5px);
    }
    60%{
        transform:translateX(-5px) translateY(5px);
    }
    100%{
        transform:translateX(0) translateY(0);
    }
}


/*
 * ngRepeat triggers three animation events: enter, leave and move.
 */
.animate.ng-enter,
.animate.ng-leave,
.animate.ng-move {
    -webkit-transition:0.250s linear all;
    transition:0.250s linear all;
}

.animate.ng-enter-stagger,
.animate.ng-leave-stagger,
.animate.ng-move-stagger {
    /* 50ms between each item being animated after the other */
    -webkit-transition-delay:150ms;
    transition-delay:150ms;

    /* this is required here to prevent any CSS inheritance issues */
    -webkit-transition-duration:0;
    transition-duration:0;
}

/* ending enter and move styling
   (this is what the element will animate from */
.animate.ng-enter,
.animate.ng-move { opacity:0; }

/* ending enter and move styling
   (this is what the element will animate towards */
.animate.ng-enter.ng-enter-active,
.animate.ng-move.ng-move-active { opacity:1; }

/* starting leave animation */
.animate.ng-leave { opacity:1; }

/* ending leave animation */
.animate.ng-leave.ng-leave-active { opacity:0; }

/*
 * ngRepeat triggers three animation events: enter, leave and move.
 */
.dtl-edit.ng-enter,
.dtl-edit.ng-leave,
.dtl-edit.ng-move {
    transition: all 0.250s ease-in;
}

/* ending enter and move styling
   (this is what the element will animate from */
.dtl-edit.ng-enter { width: 0; }

/* ending enter and move styling
   (this is what the element will animate towards */
.dtl-edit.ng-enter.ng-enter-active{ width: 45vw; }

/* starting leave animation */
.dtl-edit.ng-leave {  width: 45vw; }

/* ending leave animation */
.dtl-edit.ng-leave.ng-leave-active { width: 0; }

